# pipeline-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: README.md  config.json.example
docs/: DYNAMIC_TOOL_SELECTION.md
examples/: dynamic_analysis_demo.py
src/: __init__.py  ai_agent.py  cli.py  config.py  dynamic_tool_analyzer.py  exceptions.py  mcp_client.py
