[project]
name = "pipeline-toolkit"
version = "0.3.0"
description = "Enhanced AI-Powered MCP Client with Interactive CLI and Advanced Tool Orchestration"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Ozan Unsal", email = "ounsal@redhat.com"}
]
dependencies = [
    "click>=8.1.7",
    "mcp[cli]>=1.10.1",
    "nest-asyncio>=1.5.0",
    "prompt-toolkit>=3.0.43",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "google-generativeai>=0.8.0",
]

[project.scripts]
pipeline-toolkit = "cli:cli_main"
ptk = "cli:cli_main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli", "config", "mcp_client", "ai_agent"]
